--- a/flags-lib/build.gradle
+++ b/flags-lib/build.gradle
@@ -125,9 +125,9 @@ publishing {
     }
 }
 
-//signing {
-//    sign publishing.publications.mavenJava
-//}
+signing {
+    // sign publishing.publications.mavenJava
+}
 
 
 javadoc {
