--- a/flags-lib/build.gradle
+++ b/flags-lib/build.gradle
@@ -9,7 +9,7 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 plugins {
     // Apply the org.jetbrains.kotlin.jvm Plugin to add support for Kotlin.
-    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.10'
 
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
@@ -20,7 +20,7 @@ plugins {
     id 'signing'
 }
 
-description 'JVM application Flags built on angstromio-cli kotlinx extensions.'
+description = 'JVM application Flags built on angstromio-cli kotlinx extensions.'
 group 'io.angstrom'
 version '0.0.1-SNAPSHOT'
 
@@ -32,6 +32,12 @@ java {
     }
     withJavadocJar()
     withSourcesJar()
+}
+
+javadoc {
+    if(JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
+    }
 }
 
 tasks.named('test') {
@@ -67,7 +73,10 @@ tasks.named('jar') {
 }
 
 repositories {
-    mavenLocal()
+    maven {
+        name = 'Sonatype Snapshot Releases'
+        url = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+    }
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
@@ -86,6 +95,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             artifactId = rootProject.name
+
             from components.java
             versionMapping {
                 usage('java-api') {
@@ -121,17 +131,19 @@ publishing {
         }
     }
     repositories {
-        mavenCentral()
+        maven {
+            name='Sonatype'
+            credentials(PasswordCredentials)
+            def releasesRepoUrl = uri("https://s01.oss.sonatype.org/service/local/")
+            def snapshotsRepoUrl = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
     }
 }
 
 signing {
-    // sign publishing.publications.mavenJava
-}
-
-
-javadoc {
-    if(JavaVersion.current().isJava9Compatible()) {
-        options.addBooleanOption('html5', true)
-    }
+    def signingKey = findProperty("signingKey") as String
+    def signingPassword = findProperty("signingPassword") as String
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.mavenJava
 }
